--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,10 @@
+@import "bootstrap/dist/css/bootstrap.min.css";
+@import url("http://fonts.cdnfonts.com/css/amazon-ember");
+@import url("https://fonts.googleapis.com/css2?family=Exo:wght@500&display=swap");
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Exo', 'Amazon Ember';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
